--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@types/react": "18.2.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "next-router-mock": "^0.9.3",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
   }
