--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "watch": "nodemon src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "4.13.0",
@@ -15,8 +16,9 @@
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
     "@types/node": "18.16.3",
+    "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.5"
   },
   "prisma": {
