Update Readme file Update backend dockerfile so that it migrates and resets db on build
FE: Fix add emp visual bug, useLocale for currency instead of hardcode $
BE: Use only necessary params in sql operations, remove risky spread operator use

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,8 +22,8 @@ EXPOSE 3001
 
 RUN npx prisma generate
 
-RUN npx prisma migrate dev
-
+# Reset and remigrate the database non-interactively
+RUN npx prisma migrate reset --force
 
 # Start the application
 CMD [ "npm", "run", "dev" ]
