--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - '3000:3000'
     networks:
       - app-network
+    depends_on:
+      - backend
   backend:
     build:
       context: ./backend
@@ -24,6 +26,8 @@ services:
     #   - db
     networks:
       - app-network
+
+  # Uncomment this and change prisma schema to use postgres
   # db:
   #   image: postgres
   #   environment:
